src/objects/ACCL__Account_Trade_Org_Hierarchy__c.object
<CustomObject>
    <description>ACSF- Customer Trade  Org Hierarchy</description>
    <fields>
        <fullName>ACCL__Child_Account__c</fullName>
        <description>Reference to the business partner the relation is going to.</description>
        <label>Child Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Trade Org Hierarchies</relationshipLabel>
        <relationshipName>Account_Trade_Org_Child</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference from the business partner from which the relation is out going.</description>
        <label>Parent Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Trade Org Hierarchies (Parent Account)</relationshipLabel>
        <relationshipName>Account_Trade_Org_Parent</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_External_ID__c</fullName>
        <description>Using it for External ID, Mulesoft</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Trade Org Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCL__Child_Account__c</columns>
        <columns>ACCL__Parent_Account__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TOH-{0000}</displayFormat>
        <label>Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Trade Org Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Child_Parent_Account_Same</fullName>
        <active>true</active>
        <description>Both Child and Parent Customers cannot be the same</description>
        <errorConditionFormula>ACCL__Child_Account__c =  ACCL__Parent_Account__c</errorConditionFormula>
        <errorMessage>Child and Parent Customers cannot be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>This validates that Valid From cannot be greater than Valid Thru</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From cannot be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>